add: implementando componente cadastrar

--- a/redePets-frontend/src/app/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/entrar/entrar.component.html
@@ -8,13 +8,13 @@
                 <h1 class="text-center mb-3">Entrar</h1>
             
             <div class="form-group">
-                <label for="usuario">usuario</label>
-                <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu nome">
+                <label for="usuario">Usuário</label>
+                <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Digite seu e-mail">
             </div>
 
             <div class="form-group">
                 <label for="senha">Senha</label>
-                <input class="form-control" type="password" name="senha" id="senha" placeholder="Digite uma senha">
+                <input class="form-control" type="password" name="senha" id="senha" placeholder="Digite sua senha">
             </div>
 
             <div class="d-flex justify-content-center">
