--- a/redePets-frontend/src/app/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/inicio-deslogado/inicio-deslogado.component.html
@@ -6,4 +6,9 @@
 
 <h4>Sobre Nós</h4>
 
+<div class="d-flex justify-content-center">
+    <button type="submit" class="btn btn-success mr-4" routerLink='/entrar'>Entrar</button>
+    <button type="submit" class="btn btn-success mr-4" routerLink='/cadastrar'>Cadastrar</button>
+</div>
+
 
