--- a/redePets-frontend/src/app/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/entrar/entrar.component.html
@@ -18,12 +18,14 @@
             </div>
 
             <div class="d-flex justify-content-center">
-                <button class="btn btn-success">Entrar</button>
+                <button class="btn btn-success" routerLink='/inicio-logado'>Entrar</button>
             </div>
 
             <hr class="mt-5 mb-5"> 
             <p class="text-center">
-               <a routerLink="/cadastrar"> Não tem uma conta cadastre-se</a>
+                Não tem uma conta?
+                <br>
+               <a routerLink="/cadastrar"> Cadastre-se</a>
             </p>
             </div>
         </div>
