add: metodos post de entrar e cadastrar

--- a/redePets-frontend/src/app/app.component.html
+++ b/redePets-frontend/src/app/app.component.html
@@ -1,5 +1,5 @@
-<app-menu></app-menu>
+<app-menu *ngIf="authService.logado()"></app-menu>
 
 <router-outlet></router-outlet>
 
-<app-rodape></app-rodape>
+<app-rodape *ngIf="authService.logado()"></app-rodape>
