--- a/redePets-frontend/src/app/component/menu/menu.component.html
+++ b/redePets-frontend/src/app/component/menu/menu.component.html
@@ -6,10 +6,10 @@
     <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
       <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
-          <img src="http://s2.glbimg.com/cYa3pKAKIPidjKyGPuAd8T4Hd1I=/e.glbimg.com/og/ed/f/original/2017/08/21/dog-2570398_960_720.jpg" alt="imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
+          <img src="{{foto}}" alt="imagem do user" width="50px" height="50px" class="img-fluid rounded-circle">
         </li>
         <li class="nav-item pl-3">
-         <p class="m-0 font-weight-bold text-white fs-16">Nome do usuário</p>
+         <p class="m-0 font-weight-bold text-white fs-16">{{nome}}</p>
         </li>
 
         <li class="nav-item pl-3">
