--- a/redePets-frontend/src/app/component/entrar/entrar.component.css
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.css
@@ -1,11 +1,16 @@
-  
-#img-bg{
-    background-image: url('https://via.placeholder.com/1200');
-    
-    min-height: 695px;
-    
-    background-position: center;
-    background-repeat: no-repeat;
-    background-size: cover;
 
+.card {
+    box-shadow: 1px 1px 5px #A27E6E;
+    background-color: #A27E6E;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+html,body {
+    height: 100vh;
+    background-color: #E0C1AD;
+    background-position: fixed;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    overflow-y: scroll;
 }
