--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -1,14 +1,22 @@
-<h1>Inicio Deslogado</h1>
+<nav class="navbar navbar-expand-lg navbar-light cor-marrom">
 
+    <div class="container-fluid">
+      <a class="navbar-brand" href="#"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNav">
+        <ul class="navbar-nav">
 
-<h4>Missão, Visão e Valores</h4>
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">
+               <p class="txt-color1">
+                 Sobre Nós
+               </p> 
+            </a>
+          </li>
 
-
-<h4>Sobre Nós</h4>
-
-<div class="d-flex justify-content-center">
-    <button type="submit" class="btn btn-success mr-4" routerLink='/entrar'>Entrar</button>
-    <button type="submit" class="btn btn-success mr-4" routerLink='/cadastrar'>Cadastrar</button>
-</div>
-
-
+        </ul>
+      </div>
+    </div>
+</nav>
