--- a/redePets-frontend/src/styles.css
+++ b/redePets-frontend/src/styles.css
@@ -16,6 +16,10 @@
     text-align: center;
 }
 
-.cor-botao {
+.cor-marrom {
     background-color: #312227;
+}
+
+.txt-color1 {
+    color: white;
 }
