--- a/redePets-frontend/src/app/component/entrar/entrar.component.css
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.css
@@ -1,11 +1,9 @@
-
 .card {
     box-shadow: 1px 1px 5px #A27E6E;
     background-color: #A27E6E;
     padding: 30px;
     border-radius: 5px;
 }
-
-html {
-    background-color: #E0C1AD;
+.container-fluid{
+  background-color: #E0C1AD;
 }
