--- a/redePets-frontend/src/styles.css
+++ b/redePets-frontend/src/styles.css
@@ -1,4 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+html{
+  background-color: #E0C1AD;
+
+}
 
 .im-50 {
     width: 70px;
