--- a/redePets-frontend/src/app/component/cadastrar/cadastrar.component.html
+++ b/redePets-frontend/src/app/component/cadastrar/cadastrar.component.html
@@ -1,45 +1,51 @@
+
 <div class="container-fluid">
 
-        <div class="row">
+  <div class="row d-flex justify-content-center">
 
-            <div class="col-md-6" id="img-bg"></div>
+      <div class="col-md-12 mt-5 mb-5">
 
-            <div class="col-md-6 mt-5 mb-5">
+        <form class="form" action="">
 
-                <div class="row d-flex justify-content-center">
+            <div class="card">
 
-                    <div class="col-md-10">
-                        <h1 class="text-center">Cadastre-se</h1>
+                  <div class="card-top ">
+                      <h1 class="text-center">Cadastrar</h1>
+                      <img class="im-50 text-center mt-3" src="https://i.imgur.com/AlJ2JW4.png" alt="Imagem gato">
+                  </div>
+                  <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <input [(ngModel)]="usuario.email" class="form-control" type="email" name="email" id="email"
+                      placeholder="Entre com seu email">
+                  </div>
 
-                        <div class="fom-group">
-                            <label for="nome">Nome</label>
-                            <input [(ngModel)]="usuario.nome" class="form-control" type="text" name="nome" id="nome" placeholder="Entre com seu nome">
-                        </div>
+                  <div class="form-group">
+                    <label for="confirmeSenha">Confirme Senha</label>
+                    <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmeSenha"
+                      id="confirmeSenha" placeholder="Confirme sua senha">
+                  </div>
+                  <div class="form-group">
+                    <label for="telefone">Telefone</label>
+                    <input [(ngModel)]="usuario.telefone" class="form-control" type="tel" name="telefone" id="telefone"
+                      placeholder="Digite o numero de celular">
+                  </div>
 
-                        <div class="form-group">
-                            <label for="email">E-mail</label>
-                            <input [(ngModel)]="usuario.email" class="form-control" type="email" name="email" id="email" placeholder="Entre com seu email">
-                        </div>
+                  <div class="form-group">
+                    <label for="foto">Foto de perfil</label>
+                    <input [(ngModel)]="usuario.foto" class="form-control" type="text" name="foto"
+                      id="confirmeSenha" placeholder="Insira o link da foto de perfil">
+                  </div>
 
-                        <div class="form-group">
-                            <label for="senha">Senha</label>
-                            <input (input)="confirmarSenha($event)" class="form-control" type="password" name="senha" id="senha" placeholder="Digite sua senha">
-                        </div>
 
-                        <div class="form-group">
-                            <label for="confirmeSenha">Confirme Senha</label>
-                            <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmeSenha" id="confirmeSenha" placeholder="Confirme sua senha">
-                        </div>
+                  <div class="d-flex justify-content-center mt-5">
+                      <button type="submit" class="btn btn-outline-dark mr-4"  routerLink='/entrar'>Cancelar</button>
+                      <button type="submit" class="btn btn-outline-dark"(click)='cadastrar()'>Cancelar</button>
+                  </div>
 
-                        <div class="d-flex justify-content-center mt-5">
-                            <button type="submit" class="btn btn-danger mr-4" routerLink='/entrar'>Cancelar</button>
-                            <button type="submit" class="btn btn-info" (click)="cadastrar()">Cadastrar</button>
-                        </div>
-                    </div>
-
-                </div>
-            </div>
-
-    </div>
+              </div>
+        </form>
+      </div>
+  </div>
 
 </div>
+
