--- a/redePets-frontend/src/app/component/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.html
@@ -4,13 +4,13 @@
 
         <div class="col-md-12 mt-5 mb-5">
 
-          <form class="form" action="">   
+          <form class="form" action="">
 
               <div class="card">
 
                     <div class="card-top ">
                         <h1 class="text-center">Entrar</h1>
-                        <img class="im-50 text-center mt-3" src="https://i.imgur.com/eA1LIxO.png" alt="imagem do doguinho">
+                        <img class="im-50 text-center mt-3" src="https://i.imgur.com/eA1LIxO.png" alt="imagem do gato">
                     </div>
 
                     <div class="form-group">
@@ -27,10 +27,10 @@
                         <button type="submit" class="btn btn-outline-dark mr-4" (click)="entrar()">Entrar</button>
                         <button type="submit" class="btn btn-outline-dark" routerLink='/inicio-deslogado'>Cancelar</button>
                     </div>
-                
+
                 </div>
           </form>
         </div>
-    </div>   
+    </div>
 
 </div>
