fix: reorganizando diretorios edit e delete tema

--- a/redePets-frontend/src/app/component/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.html
@@ -24,9 +24,14 @@
                     </div>
 
                     <div class="d-flex justify-content-center mt-5">
-                        <button type="submit" class="btn btn-outline-dark mr-4" (click)="entrar()">Entrar</button>
-                        <button type="submit" class="btn btn-outline-dark" routerLink='/inicio-deslogado'>Cancelar</button>
+                        <button type="submit" class="btn btn-outline-dark" (click)="entrar()">Entrar</button>
                     </div>
+
+                    <hr class="mt-5 mb-5">
+
+                    <p class="text-center">
+                      Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
+                    </p>
 
                 </div>
           </form>
