--- a/redePets-frontend/src/app/component/cadastrar/cadastrar.component.html
+++ b/redePets-frontend/src/app/component/cadastrar/cadastrar.component.html
@@ -13,6 +13,12 @@
                       <h1 class="text-center">Cadastrar</h1>
                       <img class="im-50 text-center mt-3" src="https://i.imgur.com/AlJ2JW4.png" alt="Imagem gato">
                   </div>
+
+                  <div class="form-group">
+                    <label for="nome">Nome</label>
+                    <input [(ngModel)]="usuario.nome" class="form-control" type="text" name="nome" id="nome" placeholder="Seu nome">
+                  </div>
+
                   <div class="form-group">
                     <label for="email">E-mail</label>
                     <input [(ngModel)]="usuario.email" class="form-control" type="email" name="email" id="email"
@@ -20,10 +26,15 @@
                   </div>
 
                   <div class="form-group">
-                    <label for="confirmeSenha">Confirme Senha</label>
-                    <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmeSenha"
-                      id="confirmeSenha" placeholder="Confirme sua senha">
+                    <label for="senha">Senha</label>
+                    <input (input)="confirmarSenha($event)" class="form-control" type="password" name="senha" id="senha" placeholder="Sua senha">
                   </div>
+
+                  <div class="form-group">
+                    <label for="confirmeSenha">Confirme Senha</label>
+                    <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmeSenha" id="confirmeSenha" placeholder="Confirme sua senha">
+                  </div>
+
                   <div class="form-group">
                     <label for="telefone">Telefone</label>
                     <input [(ngModel)]="usuario.telefone" class="form-control" type="tel" name="telefone" id="telefone"
@@ -36,10 +47,9 @@
                       id="confirmeSenha" placeholder="Insira o link da foto de perfil">
                   </div>
 
-
                   <div class="d-flex justify-content-center mt-5">
-                      <button type="submit" class="btn btn-outline-dark mr-4"  routerLink='/entrar'>Cancelar</button>
-                      <button type="submit" class="btn btn-outline-dark"(click)='cadastrar()'>Cancelar</button>
+                      <button type="submit" class="btn btn-outline-dark mr-4" routerLink='/entrar'>Cancelar</button>
+                      <button type="submit" class="btn btn-outline-dark"(click)='cadastrar()'>Cadastrar</button>
                   </div>
 
               </div>
