add: cores no css global

--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -10,7 +10,7 @@
 
           <li class="nav-item">
             <a class="nav-link active" aria-current="page" href="#">
-               <p class="txt-color1">
+               <p class="txt-branco">
                  Sobre Nós
                </p> 
             </a>
