--- a/redePets-frontend/src/styles.css
+++ b/redePets-frontend/src/styles.css
@@ -24,6 +24,22 @@ html{
     background-color: #312227;
 }
 
-.txt-color1 {
+.cor-bege {
+    background-color: #E0C1AD;
+}
+
+.cor-marrom-claro {
+    background-color: #A27E6E;
+}
+
+.cor-laranja {
+    background-color: #CA6536;
+}
+
+.cor-vinho {
+    background-color: #931D33;
+}
+
+.txt-branco {
     color: white;
 }
