add: implementação da pagina inicio logada

--- a/redePets-frontend/src/app/app.component.html
+++ b/redePets-frontend/src/app/app.component.html
@@ -1,6 +1,10 @@
+
+<!--
 <app-menu *ngIf="authService.logado()"></app-menu>
 
 <router-outlet></router-outlet>
 
 <app-rodape *ngIf="authService.logado()"></app-rodape>
+-->
 
+<app-inicio-logado></app-inicio-logado>
