--- a/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
+++ b/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
@@ -1,4 +1,86 @@
-<h1>Inicio Logado</h1>
+
+<nav class="navbar navbar-expand-lg navbar-light cor-marrom-claro">
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    
+    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+       <ul class="container navbar-nav ml-auto d-flex justify-content-end">
+        <li class="nav-item pl-3">
+            <a class="m-0 font-weight-bold text-white fs-16">Sobre Nós</a>
+        </li>
+        </ul>
+    </div>
+
+  </nav>
+
+  <div class="container-fluid">
+
+    <div class="row">
+
+        <div class="col-md-12 cor-bege card cards-missao">
+            <div class="container">
+                <div class="row d-flex justify-content-center">
+
+                    <div class="col-md-6">
+                        <img src="../../../assets/img/logo-redePets-1.png" alt="" width="350px" height="350px">
+                    </div>
+                    <div class="col-md-6 mt-5 mb-5">
+                        <div>
+                            <h1 class="d-flex justify-content-center mr-5">Rede Pets</h1>
+                        </div>
+                       <div>
+                        <p class="mt-4">A Rede Pets é uma plataforma que visa conectar pessoas que desejam adotar pets com outras que possuem pets disponíveis para adoção.
+                        </p>
+                       </div>
+
+                     
 
 
-<h3>Forum</h3>
+                    </div>
+                    
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+</div>
+
+
+
+
+<nav class="navbar navbar-expand-lg navbar-light cor-marrom-claro">
+
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado" aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      <div class="collapse navbar-collapse" id="conteudoNavbarSuportado ">
+         <ul class="container navbar-nav ml-auto d-flex justify-content-center">
+          <li class="nav-item pl-3">
+              <a class="m-0 font-weight-bold text-white fs-16 ml-5">Minhas Postagens</a>
+          </li>
+          </ul>
+
+          <ul class="container navbar-nav ml-auto d-flex justify-content-center">
+            <li class="nav-item pl-3">
+                <a class="m-0 font-weight-bold text-white fs-16">Todas as Postagens</a>
+            </li>
+            </ul>
+
+            <ul class="container navbar-nav ml-auto d-flex justify-content-center">
+                <li class="nav-item pl-3">
+                    <a class="m-0 font-weight-bold text-white fs-16">Postagem por Tema</a>
+                </li>
+                </ul>
+      </div>
+  
+
+</nav>
+
+
+
+  
