add: implementando inicio deslogado e organizando rotas

--- a/redePets-frontend/src/app/app.component.html
+++ b/redePets-frontend/src/app/app.component.html
@@ -1,4 +1,3 @@
-
 <!--
 <app-menu *ngIf="authService.logado()"></app-menu>
 
@@ -7,4 +6,4 @@
 <app-rodape *ngIf="authService.logado()"></app-rodape>
 -->
 
-<app-inicio-logado></app-inicio-logado>
+<router-outlet></router-outlet>
