--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -1,22 +1,42 @@
-<nav class="navbar navbar-expand-lg navbar-light cor-marrom">
+<nav class="navbar navbar-expand-lg navbar-light cor-marrom-claro">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
+    aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+    <span class="navbar-toggler-icon"></span>
+  </button>
 
-    <div class="container-fluid">
-      <a class="navbar-brand" href="#"></a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
+  <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+    <ul class="container navbar-nav ml-auto d-flex justify-content-end">
+      <li class="nav-item pl-4">
+        <a class="m-0 font-weight-bold text-white" routerLink="/cadastrar">Cadastrar</a>
+      </li>
+      <li class="nav-item pl-4">
+        <a class="m-0 font-weight-bold text-white" routerLink="/entrar">Entrar</a>
+      </li>
+    </ul>
+  </div>
+</nav>
 
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" href="#">
-               <p class="txt-branco">
-                 Sobre Nós
-               </p> 
-            </a>
-          </li>
+<div class="container-fluid">
+  <div class="row">
 
-        </ul>
+    <div class="col-md-12 cor-bege p-4">
+      <div class="container">
+        <div class="row d-flex justify-content-center align-items-center">
+
+          <div class="col-md-6 d-flex justify-content-center">
+            <img src="../../../assets/img/logo-redePets-1.png" alt="Logo Rede Pets" width="350px" height="350px">
+          </div>
+
+          <div class="col-md-6 text-center">
+            <h1 class="fs-16">Seja bem-vinde!</h1>
+            <p>A Rede Pets é uma plataforma que visa conectar pessoas que desejam adotar pets com outras
+              que possuem pets disponíveis para adoção.
+            </p>
+          </div>
+
+        </div>
       </div>
     </div>
-</nav>
+
+  </div>
+</div>
