--- a/redePets-frontend/src/app/component/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.html
@@ -1,41 +1,38 @@
 <div class="container-fluid">
+  <div class="row d-flex justify-content-center">
 
-    <div class="row d-flex justify-content-center">
+    <div class="col-md-12 mt-5 mb-5">
+      <form class="form card" action="">
 
-        <div class="col-md-12 mt-5 mb-5">
-
-          <form class="form" action="">
-
-              <div class="card">
-
-                    <div class="card-top ">
-                        <h1 class="text-center">Entrar</h1>
-                        <img class="im-50 text-center mt-3" src="https://i.imgur.com/eA1LIxO.png" alt="imagem do gato">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="email">E-mail</label>
-                        <input [(ngModel)]="usuarioLogin.email" class="form-control" type="email" name="email" id="email" placeholder="Entre com seu email">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="senhar">Senha</label>
-                        <input [(ngModel)]="usuarioLogin.senha" class="form-control" type="password" name="senha" id="senha" placeholder="Entre com sua senha">
-                    </div>
-
-                    <div class="d-flex justify-content-center mt-5">
-                        <button type="submit" class="btn btn-outline-dark" (click)="entrar()">Entrar</button>
-                    </div>
-
-                    <hr class="mt-5 mb-5">
-
-                    <p class="text-center">
-                      Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
-                    </p>
-
-                </div>
-          </form>
+        <div class="card-top ">
+          <h1 class="text-center">Entrar</h1>
+          <img class="im-50 text-center mt-3" src="https://i.imgur.com/eA1LIxO.png" alt="imagem do gato">
         </div>
+
+        <div class="form-group">
+          <label for="email">E-mail</label>
+          <input [(ngModel)]="usuarioLogin.email" class="form-control" type="email" name="email" id="email"
+            placeholder="Entre com seu email">
+        </div>
+
+        <div class="form-group">
+          <label for="senhar">Senha</label>
+          <input [(ngModel)]="usuarioLogin.senha" class="form-control" type="password" name="senha" id="senha"
+            placeholder="Entre com sua senha">
+        </div>
+
+        <div class="d-flex justify-content-center mt-5">
+          <button type="submit" class="btn btn-outline-dark mr-4" (click)="entrar()">Entrar</button>
+          <button type="submit" class="btn btn-outline-dark" routerLink='/'>Cancelar</button>
+        </div>
+
+        <hr class="mt-5 mb-5">
+        <p class="text-center">
+          Não tem uma conta? <a routerLink="/cadastrar">Cadastre-se</a>
+        </p>
+
+      </form>
     </div>
+  </div>
 
 </div>
