--- a/redePets-frontend/src/app/component/tema/tema.component.html
+++ b/redePets-frontend/src/app/component/tema/tema.component.html
@@ -1,1 +1,74 @@
-<p>tema works!</p>
+<div class="container-fluid">
+
+  <div class="row bg-secondary">
+    <div class="col-md-12 text-white">
+
+      <a routerLink="/inicio" class="text-white text-left">
+        <i class="fa fa-angle-double-left" aria-hidden="true"></i> Início
+      </a>
+
+      <h1 class="fs-54 text-center">Temas</h1>
+
+      <h5 class="fs-18 text-center">Veja aqui todos os temas cadastrados ou cadastre um novo</h5>
+
+      <div class="row d-flex justify-content-center mt-4 mb-5">
+        <div class="col-md-3">
+
+          <div class="form-group">
+            <input [(ngModel)]="tema.nome" type="text" class="form-control" id="nome" placeholder="Digite o nome do tema">
+          </div>
+
+          <div class="form-group">
+            <input [(ngModel)]="tema.descricao" type="text" class="form-control" id="descricao" placeholder="Digite a descrição do tema">
+          </div>
+
+          <div class="d-flex justify-content-center">
+            <button class="btn btn-light" (click)="cadastrar()">Cadastrar</button>
+          </div>
+        </div>
+      </div>
+
+    </div>
+  </div>
+
+</div>
+
+<div class="container">
+
+  <div class="row mt-5">
+    <div class="col-md-12">
+      <h2 class="text-center">Todos os temas</h2>
+    </div>
+  </div>
+
+  <div class="row mt-3 mb-5 d-flex justify-content-center">
+    <div class="col-sm-12">
+
+      <table class="table table-hover">
+        <thead>
+          <tr>
+            <th scope="col">Id</th>
+            <th scope="col">Tema</th>
+            <th scope="col">Descrição</th>
+            <th scope="col">Relevância</th>
+            <th scope="col" class="text-right">Ações</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let tema of listaTemas">
+            <th scope="row">{{tema.id}}</th>
+            <td>{{tema.nome}}</td>
+            <td>{{tema.descricao}}</td>
+            <td>{{tema.relevancia}}</td>
+            <td class="d-flex justify-content-end">
+              <button class="btn btn-info mr-3" [routerLink]="['/tema-edit', tema.id]">Editar</button>
+              <button class="btn btn-danger" [routerLink]="['/tema-delete', tema.id]">Apagar</button>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+
+    </div>
+  </div>
+
+</div>
