add: favicon e rodapé

--- a/redePets-frontend/src/app/component/rodape/rodape.component.html
+++ b/redePets-frontend/src/app/component/rodape/rodape.component.html
@@ -1,4 +1,4 @@
-<footer class="page-footer font-small bg-secondary pt-4">
+<footer class="page-footer font-small cor-marrom-claro pt-4">
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
@@ -30,7 +30,7 @@
         </div>
     </div>
 
-    <div class="footer-copyright bg-dark text-center py-3">
-        <span class="text-light">© 2021 Copyright: RedePets</span>
+    <div class="footer-copyright cor-marrom text-center py-3">
+        <span class="text-light">© 2021 Copyright: Rede Pets</span>
     </div>
 </footer>
