add: seção de missão, visão e valores da página inicial

--- a/redePets-frontend/src/app/component/cadastrar/cadastrar.component.html
+++ b/redePets-frontend/src/app/component/cadastrar/cadastrar.component.html
@@ -5,7 +5,7 @@
       <form class="form card" action="">
 
         <div class="card-top">
-          <h1 class="text-center">Cadastrar</h1>
+          <h1 class="text-center txt-marrom">Cadastrar</h1>
           <img class="im-50 text-center mt-3" src="https://i.imgur.com/AlJ2JW4.png" alt="Imagem gato">
         </div>
 
