--- a/redePets-frontend/src/app/component/entrar/entrar.component.html
+++ b/redePets-frontend/src/app/component/entrar/entrar.component.html
@@ -4,8 +4,8 @@
     <div class="col-md-12 mt-5 mb-5">
       <form class="form card" action="">
 
-        <div class="card-top ">
-          <h1 class="text-center">Entrar</h1>
+        <div class="card-top">
+          <h1 class="text-center txt-marrom">Entrar</h1>
           <img class="im-50 text-center mt-3" src="https://i.imgur.com/eA1LIxO.png" alt="imagem do gato">
         </div>
 
