--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -1,15 +1,15 @@
-<nav class="navbar navbar-expand-lg navbar-light cor-marrom-claro">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-    aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
+<nav class="navbar navbar-expand-md navbar-dark cor-marrom-claro">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNav"
+    aria-controls="conteudoNav" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
+  <div class="collapse navbar-collapse" id="conteudoNav">
     <ul class="container navbar-nav ml-auto d-flex justify-content-end">
-      <li class="nav-item pl-4">
+      <li class="nav-item pl-5">
         <a class="m-0 font-weight-bold text-white" routerLink="/cadastrar">Cadastrar</a>
       </li>
-      <li class="nav-item pl-4">
+      <li class="nav-item pl-5">
         <a class="m-0 font-weight-bold text-white" routerLink="/entrar">Entrar</a>
       </li>
     </ul>
@@ -28,10 +28,11 @@
           </div>
 
           <div class="col-md-6 text-center">
-            <h1 class="fs-16">Seja bem-vinde!</h1>
+            <h1 class="display-4 txt-marrom mb-5">Boas vindas!</h1>
             <p>A Rede Pets é uma plataforma que visa conectar pessoas que desejam adotar pets com outras
               que possuem pets disponíveis para adoção.
             </p>
+            <p> <a routerLink="/cadastrar">Cadastre-se</a> ou <a routerLink="/entrar">entre</a> se já possui uma conta.</p>
           </div>
 
         </div>
@@ -39,4 +40,33 @@
     </div>
 
   </div>
+</div>
+
+<div class="container">
+
+<h2 class="m-5 text-center">Missão, visão e valores</h2>
+
+  <div class="card-deck mb-5">
+  <div class="card">
+    <img class="card-img-top" src="../../../assets/img/desenhos/amico-laranja-adopt-a-pet.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <h5 class="card-title">Missão</h5>
+      <p class="card-text">Nossa missão é facilitar a busca de bons lares para os animais, diminuindo o número de abandonos nas ruas. </p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="../../../assets/img/desenhos/amico-vinho-dog-walking.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <h5 class="card-title">Visão</h5>
+      <p class="card-text">Nossa visão é a de que todos os animais têm algo de especial a oferecer, independente da raça ou idade. </p>
+    </div>
+  </div>
+  <div class="card">
+    <img class="card-img-top" src="../../../assets/img/desenhos/amico-laranja-animal-shelter.png" alt="Imagem de capa do card">
+    <div class="card-body">
+      <h5 class="card-title">Valores</h5>
+      <p class="card-text">Nossos valores são o de acreditar que vidas não devem ser vendidas, por isso devemos valorizar a adoção. </p>
+    </div>
+  </div>
+</div>
 </div>
