fix: menu logado

--- a/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
+++ b/redePets-frontend/src/app/component/inicio-deslogado/inicio-deslogado.component.html
@@ -1,19 +1,23 @@
 <nav class="navbar navbar-expand-md navbar-dark cor-marrom-claro">
+
   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNav"
     aria-controls="conteudoNav" aria-expanded="false" aria-label="Alterna navegação">
     <span class="navbar-toggler-icon"></span>
   </button>
 
-  <div class="collapse navbar-collapse" id="conteudoNav">
-    <ul class="container navbar-nav ml-auto d-flex justify-content-end">
-      <li class="nav-item pl-5">
-        <a class="m-0 font-weight-bold text-white" routerLink="/cadastrar">Cadastrar</a>
-      </li>
-      <li class="nav-item pl-5">
-        <a class="m-0 font-weight-bold text-white" routerLink="/entrar">Entrar</a>
-      </li>
-    </ul>
+  <div class="container">
+    <div class="collapse navbar-collapse" id="conteudoNav">
+      <ul class="navbar-nav ml-auto d-flex align-items-center">
+        <li class="nav-item pl-5">
+          <a class="m-0 font-weight-bold text-white" routerLink="/cadastrar">Cadastrar</a>
+        </li>
+        <li class="nav-item pl-5">
+          <a class="m-0 font-weight-bold text-white" routerLink="/entrar">Entrar</a>
+        </li>
+      </ul>
+    </div>
   </div>
+
 </nav>
 
 <div class="container-fluid">
@@ -32,7 +36,7 @@
             <p>A Rede Pets é uma plataforma que visa conectar pessoas que desejam adotar pets com outras
               que possuem pets disponíveis para adoção.
             </p>
-            <p> <a routerLink="/cadastrar">Cadastre-se</a> ou <a routerLink="/entrar">entre</a> se já possui uma conta.</p>
+            <p><a routerLink="/cadastrar">Cadastre-se</a> ou <a routerLink="/entrar">entre</a> se já possui uma conta.</p>
           </div>
 
         </div>
