--- a/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
+++ b/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
@@ -14,6 +14,7 @@
             <p>A Rede Pets é uma plataforma que visa conectar pessoas que desejam adotar pets com outras
               que possuem pets disponíveis para adoção.
             </p>
+            <button type="submit" class="btn btn-outline-dark" routerLink='/tema'>Temas</button>
           </div>
 
         </div>
