--- a/redePets-frontend/src/app/component/tema/tema.component.html
+++ b/redePets-frontend/src/app/component/tema/tema.component.html
@@ -1,9 +1,9 @@
 <div class="container-fluid">
 
-  <div class="row bg-secondary">
-    <div class="col-md-12 text-white">
+  <div class="row cor-bege">
+    <div class="col-md-12 txt-marrom">
 
-      <a routerLink="/inicio" class="text-white text-left">
+      <a routerLink="/inicio" class="text-dark text-left">
         <i class="fa fa-angle-double-left" aria-hidden="true"></i> Início
       </a>
 
@@ -23,7 +23,7 @@
           </div>
 
           <div class="d-flex justify-content-center">
-            <button class="btn btn-light" (click)="cadastrar()">Cadastrar</button>
+            <button class="btn btn-outline-dark" (click)="cadastrar()">Cadastrar</button>
           </div>
         </div>
       </div>
