add: páginas de editar e excluir tema

--- a/redePets-frontend/src/app/component/delete/tema-delete/tema-delete.component.html
+++ b/redePets-frontend/src/app/component/delete/tema-delete/tema-delete.component.html
@@ -1,2 +1,28 @@
-<p>tema-delete works!</p>
-<p>tema-delete works!</p>
+<div class="container mt-5 mb-5">
+
+  <div class="row mb-5">
+    <div class="col-md-12">
+      <h1 class="text-center text-secondary">Apagar tema</h1>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-md-12">
+      <h4 class="text-center text-secondary">Você tem certeza de que deseja apagar este tema? Todas as postagens relacionadas a ele também serão apagadas!</h4>
+    </div>
+  </div>
+
+  <div class="row mb-3">
+    <div class="col-md-12">
+      <h5 class="text-center text-info">Tema: {{tema.nome}}</h5>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-12 d-flex justify-content-center">
+      <button class="btn btn-danger mr-3" routerLink="/tema">Não</button>
+      <button class="btn btn-success" (click)="apagar()">Sim</button>
+    </div>
+  </div>
+
+</div>
