--- a/redePets-frontend/src/app/component/edit/tema-edit/tema-edit.component.html
+++ b/redePets-frontend/src/app/component/edit/tema-edit/tema-edit.component.html
@@ -1,1 +1,30 @@
-<p>tema-edit works!</p>
+<div class="container mt-5 mb-5">
+
+  <div class="row">
+    <div class="col-md-12">
+      <h1 class="text-center text-secondary">Atualizar tema</h1>
+    </div>
+  </div>
+
+  <div class="row d-flex justify-content-center">
+    <div class="col-md-6">
+
+      <div class="form-group">
+        <label for="nome">Nome</label>
+        <input type="text" class="form-control" id="nome" [(ngModel)]="tema.nome">
+      </div>
+
+      <div class="form-group">
+        <label for="descricao">Descrição</label>
+        <input type="text" class="form-control" id="descricao" [(ngModel)]="tema.descricao">
+      </div>
+
+      <div class="d-flex justify-content-center">
+        <button class="btn btn-danger mr-3" routerLink="/tema">Cancelar</button>
+        <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
+      </div>
+
+    </div>
+  </div>
+
+</div>
