--- a/redePets-frontend/src/app/component/rodape/rodape.component.html
+++ b/redePets-frontend/src/app/component/rodape/rodape.component.html
@@ -2,28 +2,22 @@
     <div class="container">
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
-                <h4 class="text-white">Siga-nos nas redes sociais</h4>
+                <h4 class="text-white">Tecnologias utilizadas:</h4>
             </div>
         </div>
         <div class="row">
             <div class="col-md-12 d-flex justify-content-center">
                 <ul class="social-network">
                   <li>
-                    <a href="https://pt-br.facebook.com/" target="_blank" class="iconFacebook">
-                        <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                    </a>
+                    <i class="devicon-spring-plain fa fa-spring-square"></i>
+                  </li>
+                    <i class="devicon-bootstrap-plain colored fa fa-bootstrap"></i>
+                  <li>
+                    <i class="devicon-angularjs-plain colored fa fa-angular-square"></i>
                   </li>
 
                   <li>
-                    <a href="https://www.instagram.com/" target="_blank" class="iconInstagram">
-                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                    </a>
-                  </li>
-
-                  <li>
-                    <a href="https://br.linkedin.com/" target="_blank" class="iconLinkedin">
-                        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                    </a>
+                    
                   </li>
                 </ul>
             </div>
