--- a/redePets-frontend/src/app/component/menu/menu.component.html
+++ b/redePets-frontend/src/app/component/menu/menu.component.html
@@ -9,7 +9,7 @@
     <div class="collapse navbar-collapse" id="conteudoNav">
       <ul class="navbar-nav mr-auto d-flex align-items-center">
         <li class="nav-item active">
-          <img src="{{foto}}" alt="Foto do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
+          <!--<img src="{{foto}}" alt="Foto do usuário" width="50px" height="50px" class="img-fluid rounded-circle">
         </li>
         <li class="nav-item pl-3">
           <p class="m-0 font-weight-bold text-white fs-16">{{nome}}</p>
@@ -18,7 +18,7 @@
           <a href="">
             <p class="text-white fs-16 m-0"><i class="fa fa-pencil-square-o " aria-hidden="true"></i></p>
           </a>
-        </li>
+        </li>-->
       </ul>
       <ul class="navbar-nav ml-auto d-flex align-items-center">
         <li class="nav-item pl-3">
