--- a/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
+++ b/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
@@ -15,7 +15,7 @@
               que possuem pets disponíveis para adoção.
             </p>
             <button type="submit" class="btn btn-outline-dark mr-4" routerLink='/tema'>Temas</button>
-            <button type="submit" class="btn btn-outline-dark" data-toggle="modal" data-target="#novaPostagem">Nova Postagem</button>
+            <button type="submit" class="btn btn-outline-dark" data-toggle="modal" data-target="#nova-postagem">Nova Postagem</button>
           </div>
 
         </div>
@@ -55,7 +55,7 @@
 </nav>
 
 <div class="container mt-5 mb-5">
-  
+
   <div class="row">
 
         <div class="col-md-3 card-perfil mr-5">
@@ -63,7 +63,7 @@
           <p class="mt-3 text-center text-white">Perfil</p>
 
           <div class="row d-flex justify-content-center">
-            
+
               <img src="{{foto}}" alt="Foto do usuário" width="120px" height="120px" class="card-foto">
 
           </div>
@@ -75,37 +75,76 @@
           <div>
             <p class="mt-3 font-weight-bold text-white text-center fs-16">{{tipo}}</p>
           </div>
-            
-        </div> 
-        
-      
-        
+
+        </div>
+
+
+
         <div class="col-md-8">
 
-          
+
         <div class="row mb-5 card-postagem">
           <div class="d-flex justify-content-start col-md-12 ">
-              
+
                 <img src="{{foto}}" alt="Foto do usuário" width="50px" height="50px" class="card-foto mr-2">
 
               <div class="col-md-10 card-publicacao mt-2">
                 <p class="fs-16 mt-2">Começar publicação</p>
               </div>
         </div>
-           
+
 
         </div>
 
           <div class="row d-flex justify-content-center">
             <div class="col-md-12 card-postagem mt-5">
-              
+
             </div>
 
           </div>
-  
+
         </div>
 
   </div>
-        
-  
+
+</div>
+
+<!-- MODAL DE PUBLICAR POSTAGEM -->
+<div class="modal fade" id="nova-postagem" tabindex="-1" role="dialog" aria-labelledby="TituloModalCentralizado" aria-hidden="true">
+  <div class="modal-dialog modal-dialog-centered" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="TituloModalCentralizado">Nova postagem</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Fechar">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+
+        <div class="form-group">
+          <label for="titulo">Título</label>
+          <input [(ngModel)]="postagem.titulo" type="text" class="form-control" id="titulo" placeholder="Digite o título">
+        </div>
+
+        <div class="form-group">
+          <label for="texto">Texto</label>
+          <textarea [(ngModel)]="postagem.texto" name="texto" id="texto" rows="3" class="form-control"></textarea>
+        </div>
+
+        <div class="form-group">
+          <label for="tema">Escolha um tema ou <a data-dismiss="modal" routerLink="/tema">cadastre um novo</a>:</label>
+          <select name="tema" id="tema" class="form-control" [(ngModel)]="idTema" (change)="findByIdTema()">
+            <option *ngFor="let tema of listaTemas" value="{{tema.id}}">
+              {{tema.descricao}}
+            </option>
+          </select>
+        </div>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+        <button type="button" class="btn btn-success" data-dismiss="modal" (click)="publicar()">Publicar</button>
+      </div>
+    </div>
+  </div>
 </div>
