--- a/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
+++ b/redePets-frontend/src/app/component/inicio-logado/inicio-logado.component.html
@@ -25,34 +25,76 @@
   </div>
 </div>
 
-<nav class="navbar navbar-expand-lg navbar-light cor-marrom-claro">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#conteudoNavbarSuportado"
-    aria-controls="conteudoNavbarSuportado" aria-expanded="false" aria-label="Alterna navegação">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<div class="container mt-5 mb-5" id="postagens">
+  <nav>
+      <div class="nav nav-tabs d-flex justify-content-center" id="nav-tab" role="tablist">
 
-  <div class="container">
-    <div class="collapse navbar-collapse" id="conteudoNavbarSuportado">
-      <ul class="container navbar-nav ml-auto d-flex justify-content-center">
-        <li class="nav-item pl-3">
-          <a class="m-0 font-weight-bold text-white fs-16 ml-5">Minhas Postagens</a>
-        </li>
-      </ul>
+        <a class="nav-item nav-link active text-secondary font-weight-bold" id="todasPostagens-tab" data-toggle="tab" 
+        href="#todasPostagens" role="tab" aria-controls="todasPostagens" aria-selected="true">Todas as Postagens</a>
 
-      <ul class="container navbar-nav ml-auto d-flex justify-content-center">
-        <li class="nav-item pl-3">
-          <a class="m-0 font-weight-bold text-white fs-16">Todas as Postagens</a>
-        </li>
-      </ul>
+        <a (click)='findByIdUsuario()' class="nav-item nav-link text-secondary font-weight-bold" id="minhasPostagens-tab" data-toggle="tab" 
+        href="#minhasPostagens" role="tab" aria-controls="minhasPostagens" aria-selected="false">Minhas Postagens</a>
 
-      <ul class="container navbar-nav ml-auto d-flex justify-content-center">
-        <li class="nav-item pl-3">
-          <a class="m-0 font-weight-bold text-white fs-16">Postagem por Tema</a>
-        </li>
-      </ul>
-    </div>
-  </div>
-</nav>
+        <a class="nav-item nav-link text-secondary font-weight-bold" id="postagensTema-tab" data-toggle="tab" 
+        href="#postagensTema" role="tab" aria-controls="postagensTema" aria-selected="false">Postagens por Tema</a>
+
+      </div>
+    </nav>
+    <div class="tab-content mt-5" id="nav-tabContent">
+
+      <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">
+         
+        <div class="card-columns">
+          <div class="card text-center" *ngFor='let item of listaPostagens'>
+            <div class="card-body">
+              <h5 class="card-title m-0">{{item.titulo}}</h5>
+              <small class="text-muted">Tema:{{item.tema.descricao}}</small>
+              <p class="card-text mt-3">{{item.texto}}.</p>
+              <p class="card-text">
+                <small class="text-muted">
+                  {{item.data | date:'dd/MM/yyyy'}} ás {{item.data | date:'HH:mm'}}</small></p>
+              <p class="card-text"><small class="text-muted"> By: {{item.usuario.nome}}</small></p>
+            </div>
+        </div>
+        </div>
+</div>
+      <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
+         
+        <div class="card-columns">
+          <div class="card text-center" *ngFor='let item of usuario.postagem'>
+            <div class="card-body">
+              <h5 class="card-title m-0">{{item.titulo}}</h5>
+              <small class="text-muted">Tema:{{item.tema.descricao}}</small>
+              <p class="card-text mt-3">{{item.texto}}.</p>
+              <p class="card-text">
+                <small class="text-muted">
+                  {{item.data | date:'dd/MM/yyyy'}} ás {{item.data | date:'HH:mm'}}</small></p>
+                  <a [routerLink]="['/postagem/edit',item.id]" class="text-info mr-3" href="">Editar</a>
+                 <a [routerLink]="['/postagem/delete',item.id]" class="text-danger" href="">Apagar</a>
+            </div>
+        </div>
+        </div> 
+      </div>
+
+      <div class="tab-pane fade" id="postagensTema" role="tabpanel" aria-labelledby="postagensTema-tab">
+          
+        <div class="card-columns" *ngFor='let tema of listaTemas'>
+          <div class="card text-center" *ngFor='let item of tema.postagem'>
+            <div class="card-body">
+              <h5 class="card-title m-0">{{item.titulo}}</h5>
+              <p class="card-text mt-3">{{item.texto}}.</p>
+              <p class="card-text">
+                <small class="text-muted">
+                  {{item.data | date:'dd/MM/yyyy'}} ás {{item.data | date:'HH:mm'}}</small></p>
+              <p class="card-text"><small class="text-muted"> By: {{item.usuario.nome}}</small></p>
+            </div>
+        </div>
+        </div>
+      </div>
+</div>
+    
+</div>
+
 
 <div class="container mt-5 mb-5">
 
